Additional style fixes for Utilization card - make rows smaller - fix padding - fix card visual on smaller screens

--- a/frontend/packages/console-shared/src/components/dashboard/utilization-card/utilization-card.scss
+++ b/frontend/packages/console-shared/src/components/dashboard/utilization-card/utilization-card.scss
@@ -1,47 +1,58 @@
 @import '~@patternfly/patternfly/sass-utilities/colors';
 
-.co-utilization-card__area-chart {
-  margin: 0;
-  padding: 0;
-}
-
-.co-utilization-card .co-u-hidden {
-  display: none;
+.co-utilization-card-popover__consumer-link {
+  display: flex;
+  justify-content: space-between;
 }
 
 .co-utilization-card__body {
   padding: 0;
 }
 
-.co-utilization-card-popover__consumer-link {
-  display: flex;
-  justify-content: space-between;
+.co-utilization-card__item .co-u-hidden {
+  display: none;
 }
 
-.co-utilization-card__item:not(:first-child) {
-  border-top: var(--pf-global--BorderWidth--sm) solid var(--pf-global--BorderColor--100);
-}
-
-.co-utilization-card__item > * {
-  padding: var(--pf-global--spacer--md);
-}
-
-.co-utilization-card__item__text {
-  color: var(--pf-global--Color--200);
-  font-size: var(--pf-global--FontSize--sm);
+.co-utilization-card__item .co-utilization-card__item-chart.co-utilization-card__item-chart--times {
+  padding: var(--pf-global--spacer--sm) var(--pf-global--spacer--lg) var(--pf-global--spacer--sm) var(--pf-global--spacer--md);
+  svg {
+    overflow: visible;
+  }
 }
 
 .co-utilization-card__item .pf-c-title {
   margin-bottom: 0;
 }
 
-.co-utilization-card__item .co-utilization-card__item__chart.co-utilization-card__item__chart--times {
-  padding: var(--pf-global--spacer--md) var(--pf-global--spacer--md) 0 var(--pf-global--spacer--md);
+.co-utilization-card__item > * {
+  padding: var(--pf-global--spacer--md);
 }
 
-.co-utilization-card__item__chart .graph-wrapper {
+.co-utilization-card__item-chart .graph-wrapper {
   margin: 0;
   padding: 0;
+}
+
+.co-utilization-card__item-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.co-utilization-card__item-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.co-utilization-card__item-text {
+  color: var(--pf-global--Color--200);
+  font-size: var(--pf-global--FontSize--sm);
+}
+
+.co-utilization-card__item:not(:first-child) {
+  border-top: var(--pf-global--BorderWidth--sm) solid var(--pf-global--BorderColor--100);
 }
 
 @media screen and (min-width: 1200px) {
@@ -50,22 +61,26 @@
     justify-content: space-between;
   }
 
+  .co-utilization-card__item .co-u-visible-on-xl {
+    display: flex;
+  }
+
+  .co-utilization-card__item .co-utilization-card__item-chart.co-utilization-card__item-chart--times {
+    padding-bottom: 0;
+  }
+
   .co-utilization-card__item > *{
     flex: 1 50%;
   }
 
-  .co-utilization-card__item >*:nth-child(odd) {
-    padding: var(--pf-global--spacer--md) var(--pf-global--spacer--md) var(--pf-global--spacer--sm) var(--pf-global--spacer--lg);
-    border-right: var(--pf-global--BorderWidth--sm) solid var(--pf-global--BorderColor--100);
-    align-items: flex-start;
-  }
-
   .co-utilization-card__item >*:nth-child(even) {
-    padding: 0 var(--pf-global--spacer--md) 0 var(--pf-global--spacer--md);
     align-items: center;
+    padding: 0 var(--pf-global--spacer--lg) 0 var(--pf-global--spacer--md);
   }
 
-  .co-utilization-card .co-u-visible-on-xl {
-    display: flex;
+  .co-utilization-card__item >*:nth-child(odd) {
+    align-items: flex-start;
+    border-right: var(--pf-global--BorderWidth--sm) solid var(--pf-global--BorderColor--100);
+    padding: var(--pf-global--spacer--sm) var(--pf-global--spacer--lg);
   }
 }
